🔧 Fix tests and build issues after modernization