@@ -9,13 +9,16 @@ import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.annotation.DirtiesContext.ClassMode;
-import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@SpringJUnitConfig(classes = {TopicService.class})
+@ContextConfiguration(classes = {TopicService.class})
 @DirtiesContext(classMode = ClassMode.AFTER_EACH_TEST_METHOD)
+@ExtendWith(SpringExtension.class)
 class TopicServiceDiffblueTest {
   @Autowired private TopicService topicService;
 
@@ -38,7 +41,7 @@ class TopicServiceDiffblueTest {
     Topic getResult = actualAllTopics.get(1);
     assertEquals("Core Java", getResult.getSubjectName());
     assertEquals("Java Description", getResult.getSubjectDescription());
-    Topic getResult2 = actualAllTopics.getFirst();
+    Topic getResult2 = actualAllTopics.get(0);
     assertEquals("Spring Framework Description", getResult2.getSubjectDescription());
     assertEquals("Spring Framework", getResult2.getSubjectName());
     assertEquals("java", getResult.getId());
@@ -150,7 +153,7 @@ class TopicServiceDiffblueTest {
     // Assert
     List<Topic> allTopics = topicService.getAllTopics();
     assertEquals(3, allTopics.size());
-    assertSame(topic, allTopics.getFirst());
+    assertSame(topic, allTopics.get(0));
   }
 
   /**
@@ -225,7 +228,7 @@ class TopicServiceDiffblueTest {
 
     // Assert
     assertEquals(1, actualFilterMinimumLengthForIdResult.size());
-    Topic getResult = actualFilterMinimumLengthForIdResult.getFirst();
+    Topic getResult = actualFilterMinimumLengthForIdResult.get(0);
     assertEquals("javascript Framework Description", getResult.getSubjectDescription());
     assertEquals("javascript Framework", getResult.getSubjectName());
     assertEquals("javascript", getResult.getId());
@@ -255,7 +258,7 @@ class TopicServiceDiffblueTest {
     Topic getResult = actualFilterMinimumLengthForIdResult.get(1);
     assertEquals("Core Java", getResult.getSubjectName());
     assertEquals("Java Description", getResult.getSubjectDescription());
-    Topic getResult2 = actualFilterMinimumLengthForIdResult.getFirst();
+    Topic getResult2 = actualFilterMinimumLengthForIdResult.get(0);
     assertEquals("Spring Framework Description", getResult2.getSubjectDescription());
     assertEquals("Spring Framework", getResult2.getSubjectName());
     assertEquals("java", getResult.getId());
@@ -282,7 +285,7 @@ class TopicServiceDiffblueTest {
 
     // Assert
     assertEquals(3, actualSortTopicsWithIDResult.size());
-    Topic getResult = actualSortTopicsWithIDResult.getFirst();
+    Topic getResult = actualSortTopicsWithIDResult.get(0);
     assertEquals("Core Java", getResult.getSubjectName());
     assertEquals("Java Description", getResult.getSubjectDescription());
     Topic getResult2 = actualSortTopicsWithIDResult.get(2);
